--- a/GenModel/ModelGen.yaml
+++ b/GenModel/ModelGen.yaml
@@ -1,14 +1,406 @@
 ---
+model:
+  packages:
+    - name: AboutInfo
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
+        - name: serialNumber
+          type: string
+          apiaccess: readonly
+       
+        - name: locale
+          type: string
+          apiaccess: readonly
+       
+        - name: setSerialNumber
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setName
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setBuild
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setDisplayVersion
+          type: boolean
+          apiaccess: readonly
+       
+        - name: instanceUuid
+          type: string
+          apiaccess: readonly
+       
+        - name: apiVersion
+          type: string
+          apiaccess: readonly
+       
+        - name: setInstanceUuid
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setApiVersion
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setPid
+          type: boolean
+          apiaccess: readonly
+       
+        - name: displayVersion
+          type: string
+          apiaccess: readonly
+       
+        - name: pid
+          type: string
+          apiaccess: readonly
+       
+        - name: fullName
+          type: string
+          apiaccess: readonly
+       
+        - name: setProductVersion
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setModelNumber
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setFullName
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setServiceType
+          type: boolean
+          apiaccess: readonly
+       
+        - name: productVersion
+          type: string
+          apiaccess: readonly
+       
+        - name: modelNumber
+          type: string
+          apiaccess: readonly
+       
+        - name: serviceType
+          type: string
+          apiaccess: readonly
+       
+        - name: setLocale
+          type: boolean
+          apiaccess: readonly
+       
+        - name: name
+          type: string
+          apiaccess: readonly
+       
+        - name: build
+          type: string
+          apiaccess: readonly
+       
 
-  AboutInfo
+    
+    - name: IteratorString
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
 
-  IteratorString
+    
+    - name: StPlatformClusterResiliencyInfo
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
+        - name: nodeFailuresTolerable
+          type: integer
+          apiaccess: readonly
+       
+        - name: hddFailuresTolerable
+          type: integer
+          apiaccess: readonly
+       
+        - name: messages
+          type: array
+          apiaccess: readonly
+       
+        - name: setNodeFailuresTolerable
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setSsdFailuresTolerable
+          type: boolean
+          apiaccess: readonly
+       
+        - name: messagesIterator
+          type: 
+          apiaccess: readonly
+       
+        - name: state
+          type: string
+          apiaccess: readonly
+       
+        - name: ssdFailuresTolerable
+          type: integer
+          apiaccess: readonly
+       
+        - name: setState
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setHddFailuresTolerable
+          type: boolean
+          apiaccess: readonly
+       
+        - name: messagesSize
+          type: integer
+          apiaccess: readonly
+       
+        - name: setMessages
+          type: boolean
+          apiaccess: readonly
+       
 
-  StPlatformClusterResiliencyInfo
+    
+    - name: IteratorString
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
 
-  IteratorString
+    
+    - name: StPlatformClusterHealingInfo
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
+        - name: estimatedCompletionTimeInSeconds
+          type: integer
+          apiaccess: readonly
+       
+        - name: percentComplete
+          type: integer
+          apiaccess: readonly
+       
+        - name: messages
+          type: array
+          apiaccess: readonly
+       
+        - name: messagesSize
+          type: integer
+          apiaccess: readonly
+       
+        - name: messagesIterator
+          type: 
+          apiaccess: readonly
+       
+        - name: setMessages
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setPercentComplete
+          type: boolean
+          apiaccess: readonly
+       
+        - name: inProgress
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setInProgress
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setEstimatedCompletionTimeInSeconds
+          type: boolean
+          apiaccess: readonly
+       
 
-  StPlatformClusterHealingInfo
+    
+    - name: StClusterSummary
+      concrete: yes
+      apimethods:
+        - name: GET
+        - name: POST
+        - name: DELETE
+      properties:
+        - name: name
+          type: string
+          apiaccess: readonly
+       
+        - name: state
+          type: string
+          apiaccess: readonly
+       
+        - name: compressionSavings
+          type: number
+          apiaccess: readonly
+       
+        - name: setDataReplicationCompliance
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setTotalCapacity
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setTotalSavings
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setDowntime
+          type: boolean
+          apiaccess: readonly
+       
+        - name: clusterAccessPolicy
+          type: string
+          apiaccess: readonly
+       
+        - name: dataReplicationFactor
+          type: string
+          apiaccess: readonly
+       
+        - name: dataReplicationCompliance
+          type: string
+          apiaccess: readonly
+       
+        - name: freeCapacity
+          type: integer
+          apiaccess: readonly
+       
+        - name: setSpaceStatus
+          type: boolean
+          apiaccess: readonly
+       
+        - name: resiliencyDetailsSize
+          type: integer
+          apiaccess: readonly
+       
+        - name: resiliencyInfo
+          type: 
+          apiaccess: readonly
+       
+        - name: setAddress
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setResiliencyDetails
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setResiliencyInfo
+          type: boolean
+          apiaccess: readonly
+       
+        - name: boottime
+          type: integer
+          apiaccess: readonly
+       
+        - name: usedCapacity
+          type: integer
+          apiaccess: readonly
+       
+        - name: activeNodes
+          type: string
+          apiaccess: readonly
+       
+        - name: healingInfo
+          type: 
+          apiaccess: readonly
+       
+        - name: setCompressionSavings
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setUptime
+          type: boolean
+          apiaccess: readonly
+       
+        - name: spaceStatus
+          type: string
+          apiaccess: readonly
+       
+        - name: uptime
+          type: string
+          apiaccess: readonly
+       
+        - name: setDeduplicationSavings
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setDataReplicationFactor
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setBoottime
+          type: boolean
+          apiaccess: readonly
+       
+        - name: downtime
+          type: string
+          apiaccess: readonly
+       
+        - name: setName
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setState
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setClusterAccessPolicy
+          type: boolean
+          apiaccess: readonly
+       
+        - name: totalCapacity
+          type: integer
+          apiaccess: readonly
+       
+        - name: deduplicationSavings
+          type: number
+          apiaccess: readonly
+       
+        - name: resiliencyDetails
+          type: object
+          apiaccess: readonly
+       
+        - name: setUsedCapacity
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setHealingInfo
+          type: boolean
+          apiaccess: readonly
+       
+        - name: totalSavings
+          type: number
+          apiaccess: readonly
+       
+        - name: address
+          type: string
+          apiaccess: readonly
+       
+        - name: setFreeCapacity
+          type: boolean
+          apiaccess: readonly
+       
+        - name: setActiveNodes
+          type: boolean
+          apiaccess: readonly
+       
 
-  StClusterSummary
+    
 
